--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <p>Qual o maior goleiro que o Corinthians teve?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>O JavaScript é uma linguagem de programação</p>
+                        <p>Cassio Ramos, conquistando uma Libertadores  de forma invicta e ganhando o Mundial de Clubes.</p>
                     </div>
                 </div>
             </article> -->
